shared: fix post width squishing

--- a/css/main.scss
+++ b/css/main.scss
@@ -732,7 +732,7 @@ html {
       }
     }
 
-    @media screen and (max-width: 991px) {
+    @media screen and (max-width: 1199px) {
       .body-content {
         .posts {
           .post {
